@@ -1,3 +1,7 @@
+[B]Version 1.5.2[/B]
+- Fixed: Dharma error with sqlite. [mswiege]
+- User selectable port on windows
+- Notification of port/socket collision.
 
 [B]Version 1.5.1[/B]
 - Fixed: Move position of socket and database file back
